--- a/Moviefy/Info.plist
+++ b/Moviefy/Info.plist
@@ -20,12 +20,12 @@
 	<array>
 		<dict>
 			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
+			<string>Viewer</string>
 			<key>CFBundleURLName</key>
 			<string>com.anikamorris.Moviefy</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>auth</string>
+				<string>moviefy</string>
 			</array>
 		</dict>
 	</array>
